[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Enemis/5/planes_06B-1.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemis/5/planes_06B-2.png" type="Texture" id=2]
[ext_resource path="res://scripts/Enemies/Boss1Enemy.gd" type="Script" id=3]
[ext_resource path="res://scenes/Effects/BigExplosion.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Weapons/normalShoot/BigShootEnemy.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Weapons/Laser/BigLaserEnemy.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/Enemis/5/planes_06B-3.png" type="Texture" id=7]
[ext_resource path="res://Assets/Enemis/5/planes_06B-4.png" type="Texture" id=8]
[ext_resource path="res://scenes/Effects/Explosion.tscn" type="PackedScene" id=9]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 7 ), ExtResource( 8 ) ],
"loop": true,
"name": "vertical",
"speed": 8.0
} ]

[node name="Boss1Enemy" type="Area2D" groups=["enemy"]]
position = Vector2( 305, 50 )
scale = Vector2( 3, 3 )
script = ExtResource( 3 )
Explosion = ExtResource( 4 )
ExplosionNoDeath = ExtResource( 9 )
Shoot = ExtResource( 5 )
LaserShoot = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 47.6667, -26.3333 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "vertical"
frame = 3
flip_v = true

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="."]
position = Vector2( 47.8333, 7.66667 )
polygon = PoolVector2Array( -0.499969, 17.3333, -24.1666, -3, -30.5, 10.3333, -35.8333, 7, -36.5, -26.6667, -62.1666, -20, -39.8333, -55.6667, 39.5, -54.6667, 61.8334, -26.6667, 59.5, -20.6667, 47.1667, -26.3333, 36.8334, -23.6667, 33.1667, 11.3333, 24.5, -3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 48, 6.5 )
scale = Vector2( 4.83333, 2.18333 )

[node name="LaserSpawn" type="Position2D" parent="."]
position = Vector2( 48, 28 )

[node name="ExplosionSpawn2" type="Position2D" parent="."]
position = Vector2( 81.3333, 21.6667 )

[node name="ExplosionSpawn4" type="Position2D" parent="."]
position = Vector2( 13.3333, 19.6667 )

[node name="ExplosionSpawn5" type="Position2D" parent="."]
position = Vector2( 48, 31 )

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="LaserTimer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[node name="TimerLaserTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
[connection signal="timeout" from="LaserTimer" to="." method="_on_LaserTimer_timeout"]
[connection signal="timeout" from="TimerLaserTimer" to="." method="_on_TimerLaserTimer_timeout"]
